--- a/apps/gql/package.json
+++ b/apps/gql/package.json
@@ -38,6 +38,7 @@
     "graphql-config": "4.5.0",
     "graphql-scalars": "1.21.3",
     "graphql-yoga": "3.9.1",
+    "html-metadata-parser": "2.0.4",
     "object-hash": "3.0.0",
     "znv": "0.3.2",
     "zod": "3.21.4"
